    number of two- or four-byte units.
  * bug fix: converting from octets using the UCS-2, UCS-4, UTF-16 or UTF-32
    external formats now returns a simple string, as required by the type
    declaration of OCTETS-TO-STRING.
  * bug fix: providing an invalid external format argument to OPEN or
    WITH-OPEN-FILE (or the internal MAKE-FD-STREAM) no longer leaks a file
    descriptor.
  * optimization: external formats with :REPLACEMENT no longer bind handlers
    for coding errors around conversion functions, and so should cons less and
    be faster.
  * optimization: when the :EXTERNAL-FORMAT argument to STRING-TO-OCTETS or
    OCTETS-TO-STRING is a compile-time constant, the external format is
    resolved at load time rather than on each call.

changes in sbcl-2.3.10 relative to sbcl-2.3.9:
  * enhancement: The compiler now allows stack allocating vectors of any size
    on all safety levels, not just those which it can prove are of sub-page
    sizes. It can do this because it now inserts code to check for stack
    overflow explicitly on higher safety levels.
  * enhancements to the disassembler:
    ** on arm64, x86-64, DISASSEMBLE annotates references to static symbols.
  * bug fix: calls to generic functions now detect erroneous keywords (in the
    sense of CLHS 7.6.5) passed as arguments even when auxiliary methods are
    applicable.
  * bug fix: the standard method on SB-MOP:COMPUTE-EFFECTIVE-METHOD no longer
    inserts calls to implementation-defined local macros.  (reported by Daniel
    Kochmański)
  * bug fix: compiler error from state-machine-like LABELS forms in some
    circumstances.  (lp#2037318)
  * bug fix: fix compile-time error in constant-folding RATIONAL on literal
    float infinities.  (lp#2037455)
  * bug fix: failure on x86-64 to assemble code for EQL tests of comparisons
    with immediates.  (lp#2037456)
  * bug fix: infinite loop in the compiler for simplification of type tests of